flexbox-crash-course/styles/style.css
html {
    box-sizing: border-box;
}

* {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

body {
    background-color: #8ea8f0;
    font-family: Arial, Helvetica, sans-serif;
}

ul {
    list-style: none;
    display: flex;
}

ul.nav li {
    padding-left: 24px;
}

ul.nav li a {
    color: #ffffff;
    text-decoration: none;
    font-size: 18px;
    font-weight: 600;
}

nav {
    background-color: #0808d89a;
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 24px 0;
}

h1, h2, p {
    color: #ffffff;
}

.container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 80%;
}

.logo {
    font-size: 24px;
    font-weight: bolder;
}

/* HEADER */

header {
    background-color: #0808d8;
    display: flex;
    justify-content: center;
}

header .container {
    display: flex;
}

header h1 {
    margin-bottom: 18px;
    font-size: 48px;
    font-weight: 900;
}

header p {
    font-size: 18px;
    font-weight: 500;
    line-height: 24px;
}

header img {
    width: 450px;
    height: auto;
}

/* BOXES */
section {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    padding: 16px 0;
    height: 400px;
}

section .container {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    flex-wrap: wrap;
    gap: 16px;
}

.box {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 16px;
    background-color: #0808d8;
    padding: 16px;
    border-radius: 10px;
    flex: 1;
}

.box h2 i {
    padding-right: 10px;
}

.box h2 {
    font-size: 20px;
    font-weight: bold;
}

